media: Fix CdmAdapter on GetStatusForPolicy() on CDM_8

CdmAdapter should check the return value and reject the promise as
needed per CdmWrapper API. Also mark the API as WARN_UNUSED_RESULT to
prevent this from happening again.

TBR=jrummell@chromium.org
BUG=748697
TEST=Failing test is now passing.

Change-Id: Ic656e968b03f5853a194d1b5a4202ef7decb7626
Reviewed-on: https://chromium-review.googlesource.com/585771
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489566}
Former-commit-id: 18e2ca23369139e604c5a5751ccc29eb510972cd